# custom-deterministic-code

./: .gitignore  CMakeLists.txt  CMakePresets.json  Coordinates_Calculator.py  ReadMe.txt  Trianglular_2D_plot.py  builder.sh  refinements.md  temp_refactoring.md  todo.md
input/: Options_Input.inp
output/: README.md
python_scripts/: README.md
samples/00_3x3_SMR_Reference/: CMFD_Grid.inp  Geometry_Input.inp  HGCMFD_Grid.inp  Material_Input.inp  Options_Input.inp
samples/00b_3x3_SMR_250x250/: CMFD_Grid.inp  Geometry_Input.inp  HGCMFD_Grid.inp  Options_Input.inp
samples/01_3x3_Rhomboid_250x250/: CMFD_Grid.inp  Geometry_Input.inp  HGCMFD_Grid.inp  Options_Input.inp
samples/02_3x3_Rhomboid_240x240/: CMFD_Grid.inp  Geometry_Input.inp  Options_Input.inp
samples/02_SingleMaterial/: Geometry_Input.inp  Options_Input.inp
samples/03_3x3_Octagon_250x250/: Geometry_Input.inp  HGCMFD_Grid.inp  Material_Input.inp  Options_Input.inp
samples/04_lpCMFD_SinglePin/: CMFD_Grid.inp  Geometry_Input.inp  HGCMFD_Grid.inp  Material_Input.inp  Options_Input.inp
src/: Header.f90  MOD_BiCGSTAB_Solvers.f90  MOD_CMFD_Package.f90  MOD_DebugChecks.f90  MOD_EigenvaluesSpectrumSolver.f90  MOD_GaussElimination.f90  MOD_HGCMFD_Package.f90  MOD_IO_routines.f90  MOD_Input_Reader.f90  MOD_Quad_Mesh.f90  MOD_Recurrent_Functions.f90  MOD_TriIso_Mesh.f90  MOD_pCMFD_Package.f90  MOD_pHGCMFD_Package.f90  Variables.f90
src/HGCMFD/: MOD_HGCMFD_D-hat.f90  MOD_HGCMFD_Discrepancies.f90
src/IO/: MOD_IO_routines.f90  MOD_Input_Reader.f90
src/__debug_routines/: MOD_DebugChecks.f90
src/accelerations/: MOD_CMFD_Package.f90  MOD_HGCMFD_Package.f90  MOD_pCMFD_Package.f90
src/accelerations/HGCMFD/: MOD_HGCMFD_00-Header.f90  MOD_HGCMFD_BiCGSTAB.f90  MOD_HGCMFD_D-tilde.f90  MOD_HGCMFD_Gauss-Elimination.f90  MOD_HGCMFD_Inner-Iteration.f90  MOD_HGCMFD_J-Homo-Cond.f90  MOD_HGCMFD_J-to-El.f90  MOD_HGCMFD_MigrMatr.f90  MOD_HGCMFD_Modulation.f90  MOD_HGCMFD_Normalization.f90  MOD_HGCMFD_Outer-Iteration.f90  MOD_HGCMFD_Package.f90  MOD_HGCMFD_S-fiss.f90  MOD_HGCMFD_S-tot.f90  MOD_HGCMFD_SOR.f90  MOD_HGCMFD_Shur-Complement.f90  MOD_HGCMFD_Update.f90  MOD_HGCMFD_Variables.f90  MOD_HGCMFD_XS-Homo-Cond.f90
src/main/: Header.f90
src/meshers/carthesian/: MOD_Quad_Mesh.f90
src/meshers/triangular/: MOD_TriIso_Mesh.f90
src/solvers/: MOD_BiCGSTAB_Solver.f90  MOD_BiCGSTAB_old_manual.f90  MOD_Eigvals_Solver.f90  MOD_Eigvals_Solver.old  MOD_GaussElimination.f90  MOD_LAPACK_Interfaces.f90
src/variables/: MOD_constants.f90  MOD_kinds.f90  Variables.f90
tests/: CMakeLists.txt  README.md  unit_test.sh
tests/00_unit/: MAIN_Test-Wrapper.f90  TEST_BiCGSTAB_hybrid_suite.f90  TEST_BiCGSTAB_suite.f90  TEST_Eigvals_Solver_suite.f90  TEST_GaussElimination_suite.f90
tests/02_benchmarks/: BENCH_Eigvals_Solver.f90  README.md
